# VideoScout-Pro

./: .gitignore  CMakeLists.txt  gradle.properties  settings.gradle  settings.json
.acside/editor/: openedFiles.json.bak
.github/workflows/: android_build.yml
app/: .build.gradle.kts  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  analyzer.cpp  config_parser.h  discovery.cpp  downloader.cpp  filter.h  http_client.h  logger.h  parser.cpp  thread_pool.h
app/src/main/kotlin/com/app/: MainActivity.kt
app/src/main/kotlin/com/app/engine/: Scouter.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  styles.xml
